--- a/style.css
+++ b/style.css
@@ -1,14 +1,23 @@
+html{
+    font-size: 10px;
+}
+
 body{
     font-family: "Poppins",sans-serif;
-    background-color: #F4D9D0;
+    background-color: lightblue;
     color: #921A40;
 }
 
+@media only screen and (min-width: 800px) {
+    html {
+        font-size: 15px;
+    }
+  }
+
 #container{
-    margin-left: 20vw;
-    margin-top: 20vh;
+    margin: 10vw;
 }
 
 h1{
-    
+    font-size: 5rem;
 }
