--- a/style.css
+++ b/style.css
@@ -9,8 +9,29 @@ html{
 
 body{
     font-family: "Poppins",sans-serif;
-    
+    position:relative;
 }
+
+.jfjj{
+    background-color: red;
+}
+
+#mouseCursor{
+    content: '';
+    position: fixed;
+    padding: 0;
+    margin:0;
+    top: 50px;
+    bottom: 50px;
+    z-index: 10;
+    z-index: 4;
+    width: 250px;
+    height: 250px;
+    background-color: white;
+    border-radius: 50%;
+    mix-blend-mode: difference;
+}
+
 
 @media only screen and (min-width: 800px) {
     html {
@@ -98,6 +119,8 @@ h3{
     border-radius: 10px;
 }
 
+
+
 .project{
     background-color: hsl(73, 79%, 57%);
     border-radius: 5px;
@@ -105,9 +128,12 @@ h3{
     padding-left: 2rem;
     display: flex;
     justify-content: space-between;
-    height: 50%;
-
+    height: 50vh;
+    margin-bottom: 30px;
+    position:relative;
 }
+
+
 
 .project img{
     transform: scale(90%);
