--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ a{
 }
 
 #mouseCursor{
+    pointer-events: none; 
+
     content: '';
     position: fixed;
     padding: 0;
@@ -134,7 +136,7 @@ h3{
     display: flex;
     justify-content: space-between;
     height: 50vh;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     position:relative;
 }
 
@@ -146,7 +148,46 @@ h3{
     box-shadow: -10px 10px #C75B7A;
 }
 
+.text-right{
+    display: flex;
+    justify-content: flex-start;
+}
 
+.two{
+    
+    background-color: #ABE2E7;
+}
+
+.two a{
+    color: #725BC7;
+}
+
+.two img{
+    box-shadow: -10px 10px #725BC7;
+
+}
+
+.two h2{
+    text-shadow: #725BC7 0.3rem 0.3rem 0px;
+
+}
+
+.three{
+    background-color: #C75B7A;
+}
+
+.three img{
+    box-shadow: -10px 10px #72CFB5;
+}
+
+.three a{
+    color: #72CFB5;
+}
+
+.three h2{
+    text-shadow: #72CFB5 0.3rem 0.3rem 0px;
+
+}
 
 @media screen and (max-width:600px) {
     .squareViolet{
