--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ a{
     bottom: 50px;
     z-index: 10;
     z-index: 4;
-    width: 250px;
-    height: 250px;
+    width: 150px;
+    height: 150px;
     background-color: white;
     border-radius: 50%;
     mix-blend-mode: difference;
@@ -202,7 +202,9 @@ h3{
     border-radius: 10px;
 }
 
-
+#pythonProjects{
+    display: none;
+}
 
 .project{
     background-color: hsl(73, 79%, 57%);
