--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ a{
     position: fixed;
     padding: 0;
     margin:0;
-    top: 50px;
-    bottom: 50px;
+    top: -250px;
+    left: -250px;
     z-index: 10;
     z-index: 4;
     width: 150px;
@@ -36,7 +36,7 @@ a{
     border-radius: 50%;
     mix-blend-mode: difference;
 
-}
+}   
 
 .screenInverted{
     transition: 0.1s;
